Complete customer group tag editing
